src/compose/tests/expected/invalid_override_base.txt
error: patch is invalid as `mod::outer` is not virtual (this error can be disabled with feature 'patch_any')
  ┌─ tests/overrides/top_invalid.wgsl:3:15
  │
3 │ pub patch fn mod::outer() -> f32 {
  │               ^

